# dht20-sensor

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dht20_sensor/: sensor.py
src/dht20_sensor/: sensor.py
tests/: conftest.py  test_sensor.py
